Added pg and rails_12factor gems for Heroku

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,12 @@
-$body-bg:	#34495e;
-$navbar-default-bg:	#2c3e50;
-$navbar-default-link-color:	#ecf0f1;
-$btn-default-bg:	#34495e;
-$brand-primary: #d35400;
-$jumbotron-bg:	#ecf0f1;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:						#34495e;
+$font-family-sans-serif:		'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-default-bg:				#2c3e50;
+$navbar-default-link-color:		#ecf0f1;
+$btn-default-bg:				#34495e;
+$brand-primary: 				#d35400;
+$jumbotron-bg:					#ecf0f1;
 
 @import 'bootstrap';
+
