--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 
 
 <div class="jumbotron">
-	<h1>Welcome to New App!</h1>
-	<p>Click here to <%= link_to "sign up :)", "#", class: "btn btn-primary btn-lg" %></p>
+	<center><h1>Welcome to New App!</h1>
+	<p>	<%= link_to "Login", "#", class: "btn btn-warning btn-lg" %>
+		<%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+	</p></center>
 </div>
