--- a/app/views/pages/games.html.erb
+++ b/app/views/pages/games.html.erb
@@ -1,4 +1,15 @@
+<div class="jumbotron">
 <h1>Choose a game!</h1>
+<pr>
+	<pr>
+		<pr>
+			<pr>
+				<pr>
+					<pr>
+						<pr>
+							<pr>
+								<pr>
+									<pr>
 <<div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
