--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,12 +1,19 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
-$body-bg:						#34495e;
-$font-family-sans-serif:		'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-default-bg:				#2c3e50;
-$navbar-default-link-color:		#ecf0f1;
-$btn-default-bg:				#34495e;
-$brand-primary: 				#d35400;
-$jumbotron-bg:					#ecf0f1;
+$body-bg:                                                   #ecf0f1;
+$font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                                        45px;
+$navbar-default-bg:                          white;
+$navbar-default-brand-color:      #c0392b;
+$brand-primary:                                    #c0392b;
+$jumbotron-bg:                                         white;
 
 @import 'bootstrap';
 
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
