--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       <span class="icon-bar"></span>
     </button>
     <%= link_to "New App", root_path, class: "navbar-brand" %>
-    <a class="navbar-brand" href="#">Gaming fun [placeholder text]</a>
+    <a class="navbar-brand" href="#">[placeholder text]</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
