--- a/app/views/pages/games.html.erb
+++ b/app/views/pages/games.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-<h1>Choose a game!</h1>
+<h1>Choose a game</h1>
 <<div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
